--- a/404.html
+++ b/404.html
@@ -5,20 +5,20 @@
 	<title>PodMail - EVE Online Mail Client</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="PodMail is a web-based EVE Online mail client. Access your EVE mail from anywhere with a modern, responsive interface.">
+	<meta name="description" content="PodMail is a serverless, multi-character EVE Online mail client. All your mail data stays local in your browser. No servers, complete privacy. Access EVE mail securely from anywhere.">
 	
 	<!-- OpenGraph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://podmail.space/">
 	<meta property="og:title" content="PodMail - EVE Online Mail Client">
-	<meta property="og:description" content="PodMail is a web-based EVE Online mail client. Access your EVE mail from anywhere with a modern, responsive interface.">
+	<meta property="og:description" content="PodMail is a serverless, multi-character EVE Online mail client. All your mail data stays local in your browser. No servers, complete privacy. Access EVE mail securely from anywhere.">
 	<meta property="og:image" content="https://podmail.space/img/podmail.png">
 	
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary">
 	<meta property="twitter:url" content="https://podmail.space/">
 	<meta property="twitter:title" content="PodMail - EVE Online Mail Client">
-	<meta property="twitter:description" content="PodMail is a web-based EVE Online mail client. Access your EVE mail from anywhere with a modern, responsive interface.">
+	<meta property="twitter:description" content="PodMail is a serverless, multi-character EVE Online mail client. All your mail data stays local in your browser. No servers, complete privacy. Access EVE mail securely from anywhere.">
 	<meta property="twitter:image" content="https://podmail.space/img/podmail.png">
 	
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
