--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" id="html" githubhash="12e3c32" data-bs-theme="dark">
+<html lang="en" id="html" githubhash="19dab87" data-bs-theme="dark">
 
 <head>
 	<title>PodMail - EVE Online Mail Client</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="PodMail is a web-based EVE Online mail client. Access your EVE mail from anywhere with a modern, responsive interface.">
+	<meta name="description" content="PodMail is a serverless, multi-character EVE Online mail client. All your mail data stays local in your browser. No servers, complete privacy. Access EVE mail securely from anywhere.">
 	
 	<!-- OpenGraph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://podmail.space/">
 	<meta property="og:title" content="PodMail - EVE Online Mail Client">
-	<meta property="og:description" content="PodMail is a web-based EVE Online mail client. Access your EVE mail from anywhere with a modern, responsive interface.">
+	<meta property="og:description" content="PodMail is a serverless, multi-character EVE Online mail client. All your mail data stays local in your browser. No servers, complete privacy. Access EVE mail securely from anywhere.">
 	<meta property="og:image" content="https://podmail.space/img/podmail.png">
 	
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary">
 	<meta property="twitter:url" content="https://podmail.space/">
 	<meta property="twitter:title" content="PodMail - EVE Online Mail Client">
-	<meta property="twitter:description" content="PodMail is a web-based EVE Online mail client. Access your EVE mail from anywhere with a modern, responsive interface.">
+	<meta property="twitter:description" content="PodMail is a serverless, multi-character EVE Online mail client. All your mail data stays local in your browser. No servers, complete privacy. Access EVE mail securely from anywhere.">
 	<meta property="twitter:image" content="https://podmail.space/img/podmail.png">
 	
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 	<link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css" rel="stylesheet" />
-	<link rel="stylesheet" href="/css/app.css?v=12e3c32">
-	<link rel="stylesheet" href="/css/supports.css?v=12e3c32">
+	<link rel="stylesheet" href="/css/app.css?v=19dab87">
+	<link rel="stylesheet" href="/css/supports.css?v=19dab87">
 	<style id="current_folder">
 		.folder-1.showhide {
 			display: block;
@@ -62,7 +62,7 @@
 		</div>
 		<div id="podmail" class="d-flex flex-row d-none">
 			<div class="xs-hideit d-flex flex-column vh-100" id="leftpanel">
-				<div class="d-flex"><span><a id='podmailLink' href='/?v=12e3c32'><img id="sitelogo"
+				<div class="d-flex"><span><a id='podmailLink' href='/?v=19dab87'><img id="sitelogo"
 								src="/img/podmail.png" title="PodMail"></a></span><span>
 						<h4>PodMail</h4>
 					</span>
@@ -277,9 +277,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.7/purify.min.js"
 		integrity="sha512-78KH17QLT5e55GJqP76vutp1D2iAoy06WcYBXB6iBCsmO6wWzx0Qdg8EDpm8mKXv68BcvHOyeeP4wxAL0twJGQ=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script defer="" src="/js/SimpleESI.js?v=12e3c32"></script>
-	<script defer="" src="/js/esi.js?v=12e3c32"></script>
-	<script defer="" src="/js/app.js?v=12e3c32"></script>
+	<script defer="" src="/js/SimpleESI.js?v=19dab87"></script>
+	<script defer="" src="/js/esi.js?v=19dab87"></script>
+	<script defer="" src="/js/app.js?v=19dab87"></script>
 </body>
 
 </html>
